<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ba00e5"
    android:orientation="vertical"
    tools:context=".RestauranteActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="8dp"
        card_view:cardBackgroundColor="#f2bcf8"
        android:layout_margin="10dp"
        card_view:contentPadding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="#ba00e5"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textFontWeight="200"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardBackgroundColor="#fae4fc"
                android:layout_margin="10dp"
                card_view:contentPadding="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/addres"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:id="@+id/txtDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/state"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:id="@+id/txtLocalidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/phone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:id="@+id/txtTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/web"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:id="@+id/txtWeb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/instagram"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:id="@+id/txtInstagram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/hours"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                    <TextView
                        android:id="@+id/txtHorario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>



                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/btnLlamar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#e98df5"
                    android:shadowColor="#cd00ea"
                    android:text="@string/call"
                    android:textColor="#4E342E" />

            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>